tests/positive/pr115_case_terminator.safe
package pR115_Case_Terminator

   type switch is range 0 to 1;

   function normalize (input : switch) returns boolean

      var result : boolean = False
      case input
         when 0
            result = False;

         when others
            result = True;


      return result



