tests/negative/neg_pr113_variant_range_choice.safe
package neg_PR113_Variant_Range_Choice
   type packet (Count : integer = 0) is
      record
         case Count
            when 0 to 3
               value : integer;



